fix overflow

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -3,6 +3,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 .container{     
     height: 90vh ;
@@ -68,6 +69,7 @@ nav{
     body{
         overflow-x:hidden
     }
+
     
     #nav-links{
         position: absolute;
